package model;

import java.awt.*;

public enum PawnColor {
    WHITE,   // Ne compte pas comme une couleur (si une cbo est blache, ça veut dire elle est vide)
    RED,
    ORANGE,
    GREEN,
    BLUE,
    YELLOW,
    CYAN,
    GRAY,
    PINK


}
